Changelog
=========

1.2.1 (unreleased)
------------------

- Nothing changed yet.


1.2.0 (2015-09-30)
------------------

- Add old and new state to the transitions-listing
  [elioschmutz]

- Fix status message type.
  [mbaechtold]

- Fix portal type title when deviates from FTI id.
  [jone]

- Fix contenttype icons by normalizing class.
  [jone]


1.1.1 (2014-05-01)
------------------

- Fix JavaScript issues - use jQuery properly.
  [jone]


1.1 (2013-05-24)
----------------

- Translate portal type names with its own i18n domain.
  [mathias.leimgruber]

- Fix item order - sort on path.
  [mathias.leimgruber]


1.0 (2013-01-09)
----------------

- Implementation of basic features.